Refactor index.html to use relative paths for interactive tools, removing hardcoded localhost URLs for better portability.

--- a/keycloak/index.html
+++ b/keycloak/index.html
@@ -222,7 +222,7 @@
                 <h2>🛠️ Interactive Tools</h2>
                 <ul class="route-list">
                     <li class="route-item">
-                        <a href="http://127.0.0.1:8080/webtty" class="route-link" target="_blank">
+                        <a href="/webtty" class="route-link">
                             <span class="route-icon">💻</span>
                             <div class="route-info">
                                 <div class="route-path">/webtty</div>
@@ -232,7 +232,7 @@
                         </a>
                     </li>
                     <li class="route-item">
-                        <a href="http://127.0.0.1:8080/webchat" class="route-link" target="_blank">
+                        <a href="/webchat" class="route-link">
                             <span class="route-icon">💬</span>
                             <div class="route-info">
                                 <div class="route-path">/webchat</div>
@@ -242,7 +242,7 @@
                         </a>
                     </li>
                     <li class="route-item">
-                        <a href="http://127.0.0.1:8080/webmeet" class="route-link" target="_blank">
+                        <a href="/webmeet" class="route-link">
                             <span class="route-icon">🎥</span>
                             <div class="route-info">
                                 <div class="route-path">/webmeet</div>
